@@ -66,7 +66,7 @@
   </dependencies>
   
   <build>
-    <defaultGoal>test</defaultGoal>
+    <defaultGoal>install</defaultGoal>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
