@@ -1,3 +1,7 @@
+22/11/2011 Changes
+
+Added argument to variable lookup to cater for outercontext lookups when in blocks.
+
 21/11/2011 Changes
 
 Added cascaded KeywordMessageElement processing.
